# pyproject.toml
[project]
name = "comfyui-combofilter" # immutable
description = "Frontend-only extension that filters COMBO dropdown values with ordered whitelist and blacklist rules."
version = "0.0.2"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/SparknightLLC/ComfyUI-ComboFilter"

[tool.comfy]
PublisherId = "sparknight"
DisplayName = "ComfyUI-ComboFilter"
